[gd_scene load_steps=3 format=3 uid="uid://bttlv3k235yq"]

[ext_resource type="Script" path="res://scripts/main_ui_window.gd" id="1_h5jn4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uokhp"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0

[node name="main_ui" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h5jn4")

[node name="root_container" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="root_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="root_container/VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_uokhp")

[node name="search_input" type="LineEdit" parent="root_container/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
clear_button_enabled = true
caret_blink = true

[node name="PanelContainer2" type="PanelContainer" parent="root_container/VBoxContainer"]
custom_minimum_size = Vector2(0, 320)
layout_mode = 2
size_flags_vertical = 3

[node name="search_results" type="ItemList" parent="root_container/VBoxContainer/PanelContainer2"]
layout_mode = 2
auto_height = true
item_count = 1
item_0/text = "item1"

[connection signal="gui_input" from="root_container/VBoxContainer/PanelContainer/search_input" to="." method="_on_search_input_gui_input"]
[connection signal="text_changed" from="root_container/VBoxContainer/PanelContainer/search_input" to="." method="_on_search_input_text_changed"]
